2002-09-21  KUBO Takehiro  <kubo@jiubao.org>

	* src/rbgdkpixmap.c (gdkbmap_create_from_data, 
	gdkpmap_create_from_data): accept nil for the argument of window.

2002-09-19  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdkdraw.c: Remove Deprecated methods
	(Gdk::Drawable#draw_string, #draw_text, 
	#draw_pixmap, #draw_bitmap).
	* src/rbgdkevent.c: Remove Gdk::Event#copy, 
	Change Gdk::Event#get_time to #time.
	
2002-09-19  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Bugfix: undefined symbol: Init_gtk_inits.
	Reported by Markus Jais <mjais@web.de>

2002-09-18  Masao Mutoh  <mutoh@highway.ne.jp>

	* README.EXT(.ja): Remove file.
	* README: Modified.

2002-09-16  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdkdnd.c: Rename to src/rbgdkdragcontext.c.
	
2002-09-16  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Bugfix for using ruby-1.6.x. 
	Reported by markus jais <mjais@web.de>.
	* lib/gtkcompat.rb: Remove file temporarily. 
	* src/rbgdkcursor.c: Remove LAST_CURSOR, CURSOR_IS_PIXMAP. 
	Add Gdk::Cursor#pixmap?

2002-09-15  Masao Mutoh  <mutoh@highway.ne.jp>

	* README: Revise README.
	* extconf.rb: Add check Ruby/GLib2 was installed or not.
	Install lib/gtk2.rb automatically.

2002-09-15  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtk.h: Remove CSTR2OBJ().
	* src/*.c: CSTR2OBJ() -> CSTR2RVAL, STR2CSTR -> RVAL2CSTR.

2002-09-14  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* extconf.rb: use $libs instead of $LDFLAGS
	Append -fnative-struct to $CFLAGS when G_OS_WIN32 is defined

2002-09-13  Masao Mutoh <mutoh@highway.ne.jp>

	* src/*.c: rename RBGOBJ_INITIALIZE to G_INITIALIZE.
	Add 'indent-tabs-mode: nil' to header.
	Support G_RELATIVE, G_RELATIVE2, G_REMOVE_RELATIVE.

2002-09-12  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/global.c, src/rbgtk.h: Remove arg_to_value(). 
	* src/rbgtkobject.c: Remove signal_comp(), signal_setup_args(),
	signal_sync_args(), signal_callback(), arg_set_value(). 
	They move to glib/rbgobj_signal.c.